Unntak fra* medlemskap